--- a/.dockerignore
+++ b/.dockerignore
@@ -1,14 +1,11 @@
 node_modules
-npm-debug.log
 .git
-.gitignore
-README.md
+.env
 .env.local
-.env.development.local
-.env.test.local
-.env.production.local
 dist
-build
-coverage
+*.log
+.DS_Store
+dump
+*.md
 .vscode
 .idea
