--- a/nginx.conf
+++ b/nginx.conf
@@ -1,8 +1,27 @@
+# HTTP to HTTPS redirect
 server {
     listen 80;
     server_name ashwheel.cloud www.ashwheel.cloud;
+    return 301 https://$server_name$request_uri;
+}
+
+# HTTPS server
+server {
+    listen 443 ssl http2;
+    server_name ashwheel.cloud www.ashwheel.cloud;
     root /var/www/ashwheel.cloud;
     index index.html;
+
+    # SSL configuration (Coolify will handle certificates)
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
+    ssl_prefer_server_ciphers on;
+
+    # Security headers
+    add_header X-Frame-Options "SAMEORIGIN" always;
+    add_header X-Content-Type-Options "nosniff" always;
+    add_header X-XSS-Protection "1; mode=block" always;
+    add_header Referrer-Policy "no-referrer-when-downgrade" always;
 
     location / {
         try_files $uri $uri/ /index.html;
