--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,27 +9,27 @@
   "theme_color": "#6d28d9",
   "icons": [
     {
-      "src": "/images/icon-192x192.png",
+      "src": "/images/icon-192x192.svg",
       "sizes": "192x192",
-      "type": "image/png",
+      "type": "image/svg+xml",
       "purpose": "any"
     },
     {
-      "src": "/images/icon-512x512.png",
+      "src": "/images/icon-512x512.svg",
       "sizes": "512x512",
-      "type": "image/png",
+      "type": "image/svg+xml",
       "purpose": "any"
     },
     {
-      "src": "/images/icon-maskable-192x192.png",
+      "src": "/images/icon-maskable-192x192.svg",
       "sizes": "192x192",
-      "type": "image/png",
+      "type": "image/svg+xml",
       "purpose": "maskable"
     },
     {
-      "src": "/images/icon-maskable-512x512.png",
+      "src": "/images/icon-maskable-512x512.svg",
       "sizes": "512x512",
-      "type": "image/png",
+      "type": "image/svg+xml",
       "purpose": "maskable"
     }
   ]
