--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,26 @@ VITE_ADMIN_PASSWORD=your-secure-password-here
 # 3. Update VITE_SUPABASE_ANON_KEY above
 # 4. Set your admin credentials above
 # 5. Deploy Ashwheel app with these environment variables
+
+# ========================================
+# SUPABASE SMTP CONFIGURATION (Hostinger)
+# ========================================
+# Add these to Coolify → Supabase Service → Environment Variables
+
+# SMTP_ADMIN_EMAIL=support@ashwheel.cloud
+# SMTP_HOST=smtp.hostinger.com
+# SMTP_PORT=465
+# SMTP_USER=support@ashwheel.cloud
+# SMTP_PASS=your-email-password
+# SMTP_SENDER_NAME=Ashwheel
+
+# SITE_URL=https://ashwheel.cloud
+# API_EXTERNAL_URL=https://supabase.ashwheel.cloud
+# ADDITIONAL_REDIRECT_URLS=https://ashwheel.cloud/*,https://www.ashwheel.cloud/*
+
+# ========================================
+# EMAIL OTP CONFIGURATION
+# ========================================
+# Email OTP is enabled by default in Supabase
+# Users can signup/login using OTP sent to their email
+# No additional configuration needed - SMTP settings above are sufficient
