feat: Complete platform optimization - SEO, conversion, security, and Pro redesign
- Add complete SEO implementation for 50+ tools with FAQ schemas

- Implement forgot password functionality with email verification

- Add conversion optimization with banners and analytics

- Redesign Ashwheel Pro page for Indian billing software market

- Fix Quick Heal antivirus blocking with security headers

- Update platform positioning (Free Tools + Pro SaaS)

- Add Google Analytics 4 integration with event tracking

--- a/.env.example
+++ b/.env.example
@@ -1,41 +1,6 @@
-# Production Supabase Configuration (Self-hosted on Coolify)
-# Deploy Supabase first in Coolify, then update these values
+# Supabase Configuration
+VITE_SUPABASE_URL=your-supabase-url
+VITE_SUPABASE_ANON_KEY=your-anon-key
 
-VITE_SUPABASE_URL=https://supabase.ashwheel.cloud
-VITE_SUPABASE_ANON_KEY=<GET_FROM_COOLIFY_AFTER_SUPABASE_DEPLOYMENT>
-
-# Production Configuration
-# VPS IP: 31.97.235.213 (Hostinger KVM4)
-# Domain: ashwheel.cloud
-# Supabase Domain: supabase.ashwheel.cloud
-# Panel: Coolify
-
-# Steps:
-# 1. Deploy Supabase in Coolify (Service → Supabase)
-# 2. Copy ANON_KEY from Coolify environment variables
-# 3. Update VITE_SUPABASE_ANON_KEY above
-# 4. Set your admin credentials above
-# 5. Deploy Ashwheel app with these environment variables
-
-# ========================================
-# SUPABASE SMTP CONFIGURATION (Hostinger)
-# ========================================
-# Add these to Coolify → Supabase Service → Environment Variables
-
-# SMTP_ADMIN_EMAIL=support@ashwheel.cloud
-# SMTP_HOST=smtp.hostinger.com
-# SMTP_PORT=465
-# SMTP_USER=support@ashwheel.cloud
-# SMTP_PASS=your-email-password
-# SMTP_SENDER_NAME=Ashwheel
-
-# SITE_URL=https://ashwheel.cloud
-# API_EXTERNAL_URL=https://supabase.ashwheel.cloud
-# ADDITIONAL_REDIRECT_URLS=https://ashwheel.cloud/*,https://www.ashwheel.cloud/*
-
-# ========================================
-# EMAIL OTP CONFIGURATION
-# ========================================
-# Email OTP is enabled by default in Supabase
-# Users can signup/login using OTP sent to their email
-# No additional configuration needed - SMTP settings above are sufficient
+# Google Analytics 4
+VITE_GA_TRACKING_ID=G-XXXXXXXXXX
