--- a/public/manifest.json
+++ b/public/manifest.json
@@ -31,6 +31,11 @@
       "sizes": "512x512",
       "type": "image/svg+xml",
       "purpose": "maskable"
+    },
+    {
+      "src": "/favicon.png",
+      "sizes": "64x64",
+      "type": "image/png"
     }
   ]
 }
